Implementação de listenner por usuario

--- a/env.example
+++ b/env.example
@@ -8,6 +8,7 @@ MONGODB_URI=mongodb://localhost:27017/emails-ai
 # Configurações de Segurança
 JWT_SECRET=seu_jwt_secret_aqui
 JWT_EXPIRES_IN=7d
+ENCRYPTION_KEY=sua_chave_de_32_caracteres_aqui!!
 
 # Configurações de Email (IMAP)
 EMAIL_USER=seuemail@gmail.com
